...
      />
      <Tabs.Screen
        name="orders"
        options={{
          title: t('tab.orders'),
          tabBarIcon: ({ focused, color }) => (
            <View style={focused ? styles.activeIconBackground : styles.iconBackground} testID='orders-icon' accessibilityLabel='orders-icon'>
              <OrdersIcon fill={color} />
            </View>
          ),
        }}
      />
      <Tabs.Screen
...
