...
    const styles = useMemo(() => getStyles(colors, fontSizes), [colors, fontSizes]);

    return (
        <SafeAreaView style={styles.container}>
            <ScrollView style={styles.scrollView} showsVerticalScrollIndicator={false}>
                <View style={styles.header}>
                    <Text style={styles.title} testID="settingsScreenTitle" accessibilityLabel="settingsScreenTitle">
                        {t('settings.title', 'Ajustes')}
                    </Text>
                </View>

                <View style={styles.content}>
                    <View style={styles.section}>
...
