# Search invalid clients in the app
appId: com.proyecto_final_miso.vendedoresmovil
---
- launchApp
- runFlow: login-valid.yml
- waitForAnimationToEnd 
- assertVisible:
    id: "clients-icon"
- tapOn:
    id: "clients-icon"
- assertVisible:
    id: "clients-title"
- tapOn:
    id: "searchInput"
- inputText: "Cliente Inexistente"
- assertVisible:
    id: "empty-clients"
